# loro

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_VALIDATION_REPORT.md  cobertura.xml  tarpaulin-report.html
coverage/: lcov.info
examples/: client.rs
references/: client.py  main.py
src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  service.rs  stats.rs
tests/: config_validation_test.rs  end_to_end_test.rs  http_endpoints_test.rs  integration_test.rs  service_error_test.rs  sse_output_format_test.rs  stats_concurrent_test.rs
